[package]
name = "gem2gef"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
flate2 = "1"
csv = "1"
rayon = "1.10"
hashbrown = "0.14"
ahash = "0.8"
itertools = "0.13"
serde = { version = "1", features = ["derive"] }
hdf5 = "0.8"
hdf5-sys = { version = "0.8", features = ["static", "zlib"] }
byteorder = "1.5"
clap = { version = "4", features = ["derive"] }
